deploy/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porg-deploy
  namespace: porg-ns
  labels:
    app: porg-app
    test: test
  annotations:
    fluxcd.io/tag.example-app: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: porg-app
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: porg-app
    spec:
      containers:
        - name: porg-app
          image: registry.nicronomicon.dev/porg:1.0.4
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: config
              mountPath: "/etc/config"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: porg-config
