deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: porg-service
  namespace: porg-ns
  labels:
    app: porg-app
spec:
  type: ClusterIP
  selector:
    app: porg-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
